# TaskManager

./: CMakeLists.txt  LICENSE  README.md  main.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h  to_do_list.cpp
include/controllers/: input_controller.h  menu_controller.h  task_controller.h
include/models/: reminder.h  task.h  template.h  user_settings.h
include/services/: error_handler.h  export_service.h  file_service.h  input_validator.h  logger.h  search_service.h  settings_service.h
include/views/: menu_view.h  renderer.h  task_view.h
src/: main.cpp
src/controllers/: input_controller.cpp  menu_controller.cpp  task_controller.cpp
src/models/: reminder.cpp  task.cpp  template.cpp
src/services/: error_handler.cpp  export_service.cpp  file_service.cpp  input_validator.cpp  logger.cpp  search_service.cpp  settings_service.cpp
src/views/: menu_view.cpp  renderer.cpp  task_view.cpp
